增加配置参数